--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,69 @@
-<a href="https://slack.com/oauth/authorize?scope=bot,files:read,im:write,chat:write:bot&client_id=<%=ENV['SLACK_CLIENT_ID']%>">
-<img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x"/></a>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="img/Icon.ico">
+
+    <title>Slurp</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/jumbotron-narrow.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <div class="container">
+      <div class="header clearfix">
+        <img class="pull-left" alt="Slurp" height="70" width="166" src="img/Logo.png"/>
+        <nav>
+          <ul class="nav nav-pills pull-right" style="padding-top: 20px">
+            <li role="presentation" class="active"><a href="#">Home</a></li>
+          </ul>
+        </nav>
+
+      </div>
+
+      <div class="jumbotron">
+        <h1>Slack to Dropbox</h1>
+        <p class="lead">Conveniently sync files posted in Slack channels to any Dropbox account. No need to manually download files ever again.</p>
+
+        <a href="https://slack.com/oauth/authorize?scope=bot,files:read,im:write,chat:write:bot,im:history&client_id=<%=ENV['SLACK_CLIENT_ID']%>">
+        <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x"/></a>
+      </div>
+
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <h4>Simple</h4>
+          <p>Set up the integration in minutes simply by logging into Slack and Dropbox.</p>
+
+          <h4>Instantaneous</h4>
+          <p>Files will be sent to Dropbox the moment they get posted in Slack.</p>
+        </div>
+
+        <div class="col-lg-6">
+          <h4>Customizable</h4>
+          <p>Invite the Slurp bot to only those channels you want to sync.</p>
+
+          <h4>Never too late</h4>
+          <p>Already have a ton of old files in Slack? Simply ask the Slurp bot to grab those, too.</p>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <p>&copy; 2016 Slurp</p>
+        <p style="color:#FF0000">DISCLAIMER: Slurp is a hobby project and has not been audited for security. Slurp is not suited for applications involving the exchange of confidential / sensitive information. Use at your own risk. The author assumes no responsibility for any breaches that result from the use of Slurp.</p>
+      </footer>
+
+    </div> <!-- /container -->
+
+  </body>
+</html>
